# MITK2018-based-app

src/: Application.cpp  Application.h  CMakeLists.txt  app.ui  files.cmake  main.cpp
src/resources/: UPF_icon.qrc
